Navbar done with responsiveness

--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechWave</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body class="inter-font">
+    <header>
+      <div class="nav-container">
+        <nav class="container">
+          <img src="./assets/TechWave.png" alt="logo" />
+
+          <ul class="nav-link">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Episodes</a></li>
+            <li><a href="#">Host</a></li>
+          </ul>
+
+          <button class="btn">
+            Subscribe <i class="fa-solid fa-arrow-right"></i>
+          </button>
+
+          <img class="menu-icon" src="./assets/hamburger-menu.png" alt="menu" />
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
