--- a/index.html
+++ b/index.html
@@ -26,12 +26,41 @@
           </ul>
 
           <button class="btn">
-            Subscribe <i class="fa-solid fa-arrow-right"></i>
+            Subscribe <i class="fa-solid fa-arrow-right animated-btn"></i>
           </button>
 
           <img class="menu-icon" src="./assets/hamburger-menu.png" alt="menu" />
         </nav>
       </div>
+
+      <section class="hero">
+        <div class="hero-content">
+          <div class="hero-circle">
+            <img src="./assets/hero-circle.png" alt="hero-circle" />
+
+            <img src="./assets/microphone.png" alt="microphone" />
+          </div>
+
+          <div class="hero-bottom">
+            <h1>TechWave</h1>
+            <p>
+              Your daily dose of tech insights, productivity hacks, and personal
+              growth
+            </p>
+            <div class="hero-bottom-buttons">
+              <button class="btn">
+                <img src="./assets/spotify.png" alt="spotify" />
+                Listen On Spotify
+              </button>
+
+              <button class="subscribe">
+                <img src="./assets/message.png" alt="message" />
+                Subscribe
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
   </body>
 </html>
