--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
       <section class="hero">
         <div class="hero-content">
           <div class="hero-circle">
-            <img src="./assets/hero-circle.png" alt="hero-circle" />
-
-            <img src="./assets/microphone.png" alt="microphone" />
+            <img
+              class="circle"
+              src="./assets/hero-circle.png"
+              alt="hero-circle"
+            />
+            <img
+              src="./assets/microphone.png"
+              alt="microphone"
+              class="microphone"
+            />
+            <span class="new">NEW</span>
           </div>
 
           <div class="hero-bottom">
