--- a/index.html
+++ b/index.html
@@ -70,5 +70,48 @@
         </div>
       </section>
     </header>
+
+    <main>
+      <section class="about">
+        <div class="about-content container">
+          <div class="about-text">
+            <h1>About the Podcast</h1>
+            <p>
+              TechWave is your go-to podcast for staying ahead in the fast-paced
+              world of technology.<br />We break down complex topics into
+              digestible insights, explore productivity strategies that actually
+              work,<br />and share stories of personal growth from industry
+              leaders.
+            </p>
+            <br />
+            <p>
+              Join thousands of young professionals and tech enthusiasts who
+              start their day with TechWave.
+            </p>
+          </div>
+
+          <hr />
+
+          <div class="about-info">
+            <div class="info-card">
+              <div class="info-card-title">150K+</div>
+              <p>Monthly Listeners</p>
+            </div>
+            <div class="info-card">
+              <div class="info-card-title">200+</div>
+              <p>Episodes Published</p>
+            </div>
+            <div class="info-card">
+              <div class="info-card-title">4.9&#9733;</div>
+              <p>Average Rating</p>
+            </div>
+            <div class="info-card">
+              <div class="info-card-title">50+</div>
+              <p>Industry Experts</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
