--- a/index.html
+++ b/index.html
@@ -112,6 +112,196 @@
           </div>
         </div>
       </section>
+
+      <section class="choose">
+        <div class="choose-container container">
+          <h1>Why Choose TechWave</h1>
+          <div class="choose-grid">
+            <div class="box-1">
+              <img src="./assets/headphone.png" alt="headphone" />
+              <h6>Premium Audio Quality</h6>
+              <p>
+                Experience crystal-clear sound with professional-grade recording
+                equipment and expert audio engineering. Every episode is
+                mastered for optimal listening across all devices and platforms.
+              </p>
+            </div>
+            <div class="box-2">
+              <img src="./assets/device.png" alt="phone" />
+              <h6>Mobile Friendly</h6>
+              <p>
+                Listen on the go with seamless mobile experience and offline
+                downloads.
+              </p>
+            </div>
+            <div class="box-3">
+              <img src="./assets/location.png" alt="location" />
+              <h6>Global Community</h6>
+              <p>
+                Connect with tech enthusiasts from over 120 countries worldwide.
+              </p>
+            </div>
+            <div class="box-4">
+              <img src="./assets/bijli.png" alt="bijli" />
+              <h6>Exclusive Interviews</h6>
+              <p>
+                Get unprecedented access to industry titans, startup founders,
+                and tech visionaries. Our host secures exclusive conversations
+                you won't find anywhere else, diving deep into their journeys,
+                failures, and success strategies.
+              </p>
+            </div>
+            <div class="box-5">
+              <img src="./assets/resource.png" alt="resource" />
+              <h6>Rich Resources</h6>
+              <p>
+                Access show notes, transcripts, and additional learning
+                materials for every episode.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="features">
+        <h1>Featured Episodes</h1>
+        <div class="features-content container">
+          <div class="feature-card">
+            <div
+              class="video-container"
+              style="border-radius: 40px 40px 0 0; overflow: hidden"
+            >
+              <iframe
+                width="100%"
+                height="225"
+                src="https://www.youtube.com/embed/HWT7mTppo5U?si=3_cFJ7q-hFVYqmUz"
+                title="YouTube video player"
+                frameborder="0"
+                allow="
+                  accelerometer;
+                  autoplay;
+                  clipboard-write;
+                  encrypted-media;
+                  gyroscope;
+                  picture-in-picture;
+                  web-share;
+                "
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
+
+            <div class="feature-card-text">
+              <h4>The Future of AI in Everyday Life</h4>
+              <p>
+                Exploring how artificial intelligence is transforming our daily
+                routines and what to expect in the next decade.
+              </p>
+              <div class="time">
+                <img src="./assets/clock.png" alt="clock" />
+                <span class="min">42 min</span>
+              </div>
+            </div>
+          </div>
+          <div class="feature-card">
+            <div
+              class="video-container"
+              style="border-radius: 40px 40px 0 0; overflow: hidden"
+            >
+              <iframe
+                width="100%"
+                height="225"
+                src="https://www.youtube.com/embed/MjSUJDumj5o?si=fOfYAez84sDn_sXO"
+                title="YouTube video player"
+                frameborder="0"
+                allow="
+                  accelerometer;
+                  autoplay;
+                  clipboard-write;
+                  encrypted-media;
+                  gyroscope;
+                  picture-in-picture;
+                  web-share;
+                "
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="feature-card-text">
+              <h4>Building Better Habits for Remote Work</h4>
+              <p>
+                Practical strategies for staying productive and maintaining
+                work-life balance in a remote environment.
+              </p>
+              <div class="time">
+                <img src="./assets/clock.png" alt="clock" />
+                <span class="min">35 min</span>
+              </div>
+            </div>
+          </div>
+          <div class="feature-card">
+            <div
+              class="video-container"
+              style="border-radius: 40px 40px 0 0; overflow: hidden"
+            >
+              <iframe
+                width="100%"
+                height="225"
+                src="https://www.youtube.com/embed/hGP-56hZc4I?si=e8_r5x-YRJSqCdUK"
+                title="YouTube video player"
+                frameborder="0"
+                allow="
+                  accelerometer;
+                  autoplay;
+                  clipboard-write;
+                  encrypted-media;
+                  gyroscope;
+                  picture-in-picture;
+                  web-share;
+                "
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="feature-card-text">
+              <h4>Career Growth in Tech: A Roadmap</h4>
+              <p>
+                Expert advice on navigating your tech career from junior
+                developer to senior leadership roles.
+              </p>
+              <div class="time">
+                <img src="./assets/clock.png" alt="clock" />
+                <span class="min">51 min</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="host">
+        <h1>Meet the Host</h1>
+        <div class="host-container container">
+          <div class="alex-kumar-card">
+            <img src="./assets/host.png" alt="host" />
+            <div class="alex-info">
+              <h3>Alex Kumar</h3>
+              <p>
+                Tech entrepreneur, productivity expert, and lifelong learner.
+                Alex has been in the tech industry for over 10 years, working
+                with startups and Fortune 500 companies. Through TechWave, Alex
+                shares insights from industry leaders and practical advice for
+                anyone looking to grow in tech.
+              </p>
+              <div class="alex-social">
+                <div><img src="./assets/linkedin.png" alt="in" /></div>
+                <div><img src="./assets/x.png" alt="x" /></div>
+                <div><img src="./assets/instagram.png" alt="insta" /></div>
+                <div><img src="./assets/youtube.png" alt="youtube" /></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
