--- a/index.html
+++ b/index.html
@@ -303,5 +303,32 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="logo-footer">
+        <img src="./assets/TechWave.png" alt="logo" />
+      </div>
+      <div class="footer-social">
+        <div class="two">
+          <img src="./assets/spotify.png" alt="spotify" />
+          <p>Spotify</p>
+        </div>
+        <div>
+          <img src="./assets/apple-podcast.png" alt="apple-podcast" />
+          <p>Apple Podcasts</p>
+        </div>
+        <div class="one">
+          <img src="./assets/youtube-podcast.png" alt="youtube-podcast" />
+          <p>Youtube</p>
+        </div>
+        <div>
+          <img src="./assets/twitter.png" alt="twitter" />
+          <p>Twitter</p>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2026 TechWave Podcast. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
